flux/manifests/local-management/harbor/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: harbor-vs
  namespace: istio-system
spec:
  hosts:
    - "harbor.management.local"
  gateways:
    - istio-ingress-gateway
  http:
    - match:
        - uri:
            prefix: "/v2"
      route:
        - destination:
            host: harbor-local-registry.harbor.svc.cluster.local
            port:
              number: 5000
    - route:
        - destination:
            host: core-harbor-domain.harbor.svc.cluster.local
            port:
              number: 80
